--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,12 @@ DATABASE_URI=postgres://postgres:<password>@127.0.0.1:5432/your-database-name # 
 PAYLOAD_SECRET=YOUR_SECRET_HERE # Generate it!
 BLOB_READ_WRITE_TOKEN=YOUR_READ_WRITE_TOKEN_HERE # Vercel Blob Example
 
-RESEND_API_KEY=re_xxxxxxxx # Email Configuration
-EMAIL_FROM=noreply@yourdomain.com # Email Configuration
+# WorkOS AuthKit Configuration
+WORKOS_CLIENT_ID=client_xxx # Get from WorkOS Dashboard (dashboard.workos.com)
+WORKOS_API_KEY=sk_xxx # Secret API Key from WorkOS Dashboard
+WORKOS_COOKIE_PASSWORD=your-32-char-min-password # Generate: openssl rand -base64 24
+NEXT_PUBLIC_WORKOS_REDIRECT_URI=http://localhost:3000/callback # Callback URL (use NEXT_PUBLIC for edge functions)
+
+# Email Configuration (Optional - WorkOS handles auth emails)
+RESEND_API_KEY=re_xxxxxxxx # For app-specific emails (not auth)
+EMAIL_FROM=noreply@yourdomain.com # From address for app emails
