--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@payloadcms/db-postgres": "latest",
-    "@payloadcms/next": "latest",
-    "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/richtext-lexical": "latest",
-    "@payloadcms/storage-s3": "latest",
-    "@payloadcms/storage-vercel-blob": "latest",
+    "@payloadcms/db-postgres": "3.62.1",
+    "@payloadcms/next": "3.62.1",
+    "@payloadcms/payload-cloud": "3.62.1",
+    "@payloadcms/richtext-lexical": "3.62.1",
+    "@payloadcms/storage-s3": "3.62.1",
+    "@payloadcms/storage-vercel-blob": "3.62.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -68,7 +68,7 @@
     "lucide-react": "^0.474.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
-    "payload": "latest",
+    "payload": "3.62.1",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-day-picker": "^9.11.0",
